# orbit

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Design.md  README.md  TODO.md  update-orbit-android.sh  update-pfs-uniffi.sh
.cargo/: config.toml
.ci/: Dockerfile
.github/: ci-build.sh
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/de/maufl/orbit/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/maufl/orbit/: BootReceiver.kt  FileBrowserScreen.kt  MainActivity.kt  OrbitDocumentProvider.kt  OrbitService.kt  OrbitServiceScheduler.kt  OrbitServiceWorker.kt  PeerDiscoveryScreen.kt  ThumbnailCache.kt
android/app/src/main/java/de/maufl/orbit/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/drawable/: orbit.xml
android/app/src/test/java/de/maufl/orbit/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
orbit/: Cargo.toml
orbit-android/: Cargo.toml
orbit-android/src/: lib.rs
orbit/src/: config.rs  fuse.rs  lib.rs  network.rs  persistence.rs  rpc.rs  test_utils.rs
pfs/: Cargo.toml
pfs-uniffi/: Cargo.toml  README.md  generate-bindings.sh
pfs-uniffi/src/: lib.rs
pfs/src/: config.rs  lib.rs  persistence.rs  test_utils.rs
rust/orbit/: Cargo.toml
rust/orbit-android/src/: lib.rs
rust/orbit/src/: config.rs  lib.rs  network.rs  persistence.rs  rpc.rs  test_utils.rs
rust/orbit/tests/: basics.rs  network.rs
rust/orbitctl/: Cargo.toml
rust/orbitctl/src/: main.rs
rust/orbitd/: Cargo.toml
rust/orbitd/src/: main.rs
src/: config.rs  fuse.rs  lib.rs  network.rs  persistence.rs  test_utils.rs
tests/: basics.rs  network.rs
uniffi-bindgen/: Cargo.toml
