[package]
name = "pfs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
ciborium = "0.2.2"
ctrlc = "3.4.6"
fjall = "2.11.0"
fuser = "0.15.1"
hmac-sha256 = "1.1.8"
libc = "0.2.171"
log = "0.4.27"
nix = "0.29.0"
serde = "1.0.219"
simple_logger = "5.0.0"

[[bin]]
name = "pfsd"
path = "src/bin/pfsd.rs"

[dev-dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
