[package]
name = "pfs-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "pfs_uniffi"

[dependencies]
pfs = { path = "../pfs" }
uniffi = "0.29"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt", "rt-multi-thread"] }
anyhow = "1.0"
android_logger = "0.15"
log = "0.4"
hex = "0.4.3"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
