[package]
name = "pfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
ciborium = "0.2.2"
env_logger = "0.11.8"
fjall = "2.11.0"
fuser = { version = "0.15.1", optional = true }
hex = "0.4"
hmac-sha256 = "1.1.8"
iroh = { version = "0.35.0", features = ["discovery-local-network"] }
libc = "0.2.171"
log = "0.4.27"
nix = "0.29.0"
parking_lot = "0.12"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["sync"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"], optional = true }
thiserror = "1.0"

[[bin]]
name = "pfsd"
path = "src/bin/pfsd.rs"
required-features = ["fuse"]

[[bin]]
name = "listener"
path = "src/bin/listener.rs"
required-features = ["fuse"]

[features]
default = []
fuse = ["dep:fuser"]
test-utils = ["uuid", "fuse"]
