[package]
name = "orbitd"
version.workspace = true
edition.workspace = true

[dependencies]
orbit = { path = "../orbit", features = ["fuse"] }
anyhow = "1.0.98"
base32 = "0.5.1"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11.8"
fuser = "0.15.1"
futures = "0.3"
hex = "0.4"
log = "0.4.27"
tarpc = { version = "0.34", features = ["full"] }
tokio = { version = "1.45.1", features = ["sync", "net", "io-util", "rt-multi-thread", "macros", "signal"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
